[package]
name = "slacker"
version = "0.0.3-pre"
authors = ["Ning Sun <sunng@about.me>"]
description = "Slacker server built on top of tokio."
license = "MIT/Apache-2.0"
keywords = ["slacker", "rpc", "clojure", "tokio"]
homepage = "https://github.com/sunng87/slacker-rust"
repository = "https://github.com/sunng87/slacker-rust"
documentation = "https://docs.rs/slacker-rust/"
readme = "README.md"

[dependencies]
tokio-core = "^0.1.0"
tokio-proto = "^0.1.0"
tokio-service = "^0.1.0"
serde_json = "^0.9.0"
futures = "^0.1.0"
log = "0.3.6"
byteorder = "^1.0.0"

[dev-dependencies]
env_logger = "^0.4.0"

[package.metadata.release]
sign-commit = true
upload-doc = true
