[package]
name = "slacker"
version = "0.1.4-alpha.0"
authors = ["Ning Sun <sunng@about.me>"]
description = "Slacker server built on top of tokio."
license = "MIT/Apache-2.0"
keywords = ["slacker", "rpc", "clojure", "tokio"]
homepage = "https://github.com/sunng87/slacker-rust"
repository = "https://github.com/sunng87/slacker-rust"
documentation = "https://docs.rs/slacker-rust/"
readme = "README.md"

[dependencies]
tokio = "0.1"
tokio-codec = "0.1"
serde = "^1.0.0"
serde_json = "^1.0.0"
futures = "^0.1.0"
futures-cpupool = "^0.1.5"
log = "0.4.3"
bytes = "0.4.8"
byteorder = "1.2.3"
nom = "4.0.0"

[dev-dependencies]
env_logger = "^0.5.10"
maplit = "^1.0.1"

[package.metadata.release]
sign-commit = true
upload-doc = true
